# xml-join

./: .gitignore  Makefile  README.md  build_exe.py  pyproject.toml  start_join.spec  test_gui.py  xmlJoin.exe.spec  xml_join.spec
xml_join/: join.py
xml_join/scripts/: start_join.py
